Updated help files for release

--- a/Resources/English.lproj/24 Hour Movie Help/pgs/known_bugs.html
+++ b/Resources/English.lproj/24 Hour Movie Help/pgs/known_bugs.html
@@ -34,7 +34,7 @@
 						<div class="Name">Known bugs</div>
 						<ul class="ListBullet">
 							<li>
-								<p class="Para">No known bugs at this time.</p>
+								<p class="Para">The first change to the sequence length setting after launch will not always take effect immediately.</p>
 							</li>
 						</ul>
 					</div>
