Documentation for HEAD^

--- a/Resources/English.lproj/24 Hour Movie Help/pgs/changelist.html
+++ b/Resources/English.lproj/24 Hour Movie Help/pgs/changelist.html
@@ -32,6 +32,25 @@
 					</div>
 					
 					<div class="Task">
+						<div class="Name">Version 1.0.1 <em>(October 19, 2009)</em></div>
+						<div class="Subhead">
+							<div class="Name">Feature Improvements</div>
+						</div>
+						<ul class="ListBullet">
+							<li>
+								<p class="Para">If you move your image folder, or if it is on a drive that is unmounted, the program will automatically detect this and will still be able to use your image folder if possible.</p>
+							</li>
+						</ul>
+						<div class="Subhead">
+							<div class="Name">Bug Fixes</div>
+						</div>
+						<ul class="ListBullet">
+							<li>
+								<p class="Para">Fixed some minor memory leaks.</p>
+							</li>
+						</ul>
+					</div>
+					<div class="Task">
 						<div class="Name">Version 1.0 <em>(September 22, 2009)</em></div>
 						<ul class="ListBullet">
 							<li>
